Making UI size better suitable for phones

--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
          }
         </script>
         <style>
+         body {
+             font-size: xx-large;
+         }
          .source {
-             width: 20em;
+             font-size: xx-large;
+             width: 16em;
+         }
+         button {
+             font-size: xx-large;
          }
          .app {
              margin: 10%;
